--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
 }
 
 .left-nav{
+
     grid-area: left-nav;
     display: grid;
     grid-template-areas: 
@@ -25,23 +26,50 @@ body{
     "sec1"
     "sec2"
     "empty";
+
+    grid-template-rows: 75px 200px 200px 200px;
+
+
+
+    background-color: #06b6d4;
+    color: white;
+    row-gap: 30px;
 }
 
 .top-page{
     grid-area: topBar;
 }
-        /* Left Nav Grid Layout */
-            .project-container{
+
+.project-container{
                 grid-area: projects;
             }
+
+
+        /* Left Nav Grid Layout */
+           
             .Dash{
                 grid-area: Heading;
+                display: flex;
+                align-items: center;
+                padding-left: 30px;
+               
             }
 
             .home-com{
                 grid-area: sec1;
+                display: flex;
+                flex-direction: column;
+                padding-left: 50px;
+                justify-content: space-between;
+                list-style: none;
+
             }
 
             .setting-priv{
                 grid-area: sec2;
+                display: flex;
+                flex-direction: column;
+                padding-left: 50px;
+                justify-content: space-around;
+                list-style: none;
             }
