--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 *{
     margin: 0;
     padding: 0;
+    font-family: Roboto;
 }
 
 ul{
@@ -14,13 +16,22 @@ body{
         "left-nav projects announcements"
         "left-nave projects trending";
     grid-template-columns: .8fr 2.4fr .8fr;
-    grid-template-rows: 100vh;
+
 }
 
 
 
 .top-page{
     grid-area: topBar;
+    display: grid;
+    grid-template-areas: 
+            "topPage"
+            "bottomPage"
+    ;
+    background-color: white;
+    grid-template-rows:80px;
+    padding: 5px;
+    color: rgb(24, 24, 24);
 }
 
 .project-container{
@@ -28,5 +39,3 @@ body{
             }
 
 
-        /* Left Nav Grid Layout */
-          
