--- a/style.css
+++ b/style.css
@@ -31,11 +31,33 @@ body{
     background-color: white;
     grid-template-rows:80px;
     padding: 5px;
+    padding-bottom: 15px;
     color: rgb(24, 24, 24);
+    box-shadow: 
+              0 2px 2px rgba(0,0,0,0.12), 
+              0 4px 4px rgba(0,0,0,0.12), 
+              0 8px 8px rgba(0,0,0,0.12),
+              0 16px 16px rgba(0,0,0,0.12);
+              z-index: 3;
 }
 
-.project-container{
+.project-container {
+                position: inherit;
+                overflow: hidden;
+                background-color: #ecfeff;
                 grid-area: projects;
+                display: grid;
+                height: 80vh;
+                grid-template-areas: 
+                            "heading empty"
+                            "on tw"
+                            "thre for" 
+                            ;
+                grid-template-rows: 15px 1fr 1fr;
+                gap: 25px;
+                padding: 20px 30px;
+                margin-top:0px;
+                z-index: 1;
+                
             }
-
 
